<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.StepDetailsFragment">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_step_details_ingredients_RV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dp40"
        tools:listitem="@layout/item_ingredient" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_step_details_main_layout_CL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/fragment_step_details_player"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fragment_step_details_description_TV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_side_margin"
            app:layout_constraintTop_toBottomOf="@id/fragment_step_details_player"
            tools:text="Do this step then do something else and it will work." />

 </androidx.constraintlayout.widget.ConstraintLayout>
    <Button
        android:id="@+id/fragment_step_details_back_BTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_side_margin"
        android:text="@string/back"
        android:layout_gravity="bottom|start" />

    <Button
        android:id="@+id/fragment_step_details_next_BTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_side_margin"
        android:text="@string/next"
        android:layout_gravity="bottom|end" />

</FrameLayout>