...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_side_margin"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activity_main_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_recipe_card"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
